# onyx

./: .gitignore  AGENTS.md  pyproject.toml
backend/: Dockerfile  Dockerfile.model_server  pyproject.toml  supervisord.conf
backend/alembic/: env.py  run_multitenant_migrations.py
backend/alembic/versions/: 90e3b9af7da4_tag_fix.py
backend/alembic_tenants/: env.py
backend/onyx/: main.py  mcp_server_main.py  setup.py
backend/onyx/access/: access.py  hierarchy_access.py
backend/onyx/auth/: oauth_refresher.py  oauth_token_manager.py  schemas.py  users.py
backend/onyx/chat/: chat_state.py  chat_utils.py  llm_loop.py  llm_step.py  models.py  process_message.py  prompt_utils.py  save_chat.py
backend/onyx/configs/: app_configs.py  chat_configs.py  constants.py
backend/onyx/connectors/: credentials_provider.py  interfaces.py  models.py
backend/onyx/db/: chat.py  credentials.py  document.py  document_set.py  enums.py  federated.py  file_content.py  file_record.py  hierarchy.py  llm.py  mcp.py  memory.py  models.py  oauth_config.py  opensearch_migration.py  persona.py  pydantic_type.py  slack_bot.py  slack_channel_config.py  swap_index.py  tools.py  user_preferences.py  users.py  web_search.py
backend/onyx/deep_research/: dr_loop.py
backend/onyx/document_index/: disabled.py  factory.py  interfaces.py  interfaces_new.py  vespa_constants.py
backend/onyx/evals/: eval.py  eval_cli.py
backend/onyx/federated_connectors/: federated_retrieval.py
backend/onyx/file_processing/: image_summarization.py
backend/onyx/file_store/: file_store.py  postgres_file_store.py  utils.py
backend/onyx/indexing/: indexing_pipeline.py  models.py
backend/onyx/key_value_store/: store.py
backend/onyx/llm/: factory.py  models.py  multi_llm.py  (+1 more)
backend/requirements/: default.txt  dev.txt  ee.txt  model_server.txt
backend/scripts/: dev_run_background_jobs.py
backend/shared_configs/: configs.py
desktop/src-tauri/: Cargo.toml
(+813 files in other folders)
